make toggler and hamburger icon fixed on the top on smaller screens

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -101,3 +101,13 @@ a.nav-link-item:hover::after {
 .glassy .theme-toggler {
   color: var(--glassy-text-color);
 }
+
+/*In small screen size, the toggler and hamburger stay fixed on the top*/
+
+@media (max-width: 992px) {
+  .toggler-hamburger-container {
+    top: 15px;
+    position: absolute;
+    right: 10%;
+  }
+}
